--- a/views/gear.ejs
+++ b/views/gear.ejs
@@ -54,12 +54,8 @@
                                                 <img src="./media/<%= gear.gearImage %>" class="img-fluid" style="width: 100%; height: auto; display: block; border-radius: 6px;" alt="Brew Gear">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" style="color: #f5f5dc;">
-                                                    <%= gear.gearName %>
-                                                </h5>
-                                                <p class="card-text" style="color: #f5f5dc;">PHP
-                                                    <%= gear.price %>
-                                                </p>
+                                                <h5 class="card-title" style="color: #f5f5dc;"><%=gear.gearName%></h5>
+                                                <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                 <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                                 <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                                 <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -136,12 +132,8 @@
                                                 <img src="./media/<%= gear.gearImage %>" class="img-fluid" style="width: 100%; height: auto; display: block; border-radius: 6px;" alt="Coffee Beans">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" style="color: #f5f5dc;">
-                                                    <%= gear.gearName %>
-                                                </h5>
-                                                <p class="card-text" style="color: #f5f5dc;">PHP
-                                                    <%= gear.price %>
-                                                </p>
+                                                <h5 class="card-title" style="color: #f5f5dc;"><%=gear.gearName%></h5>
+                                                <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                 <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                                 <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                                 <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -217,12 +209,10 @@
                                                 <img src="./media/<%= gear.gearImage %>" class="img-fluid" style="width: 100%; height: auto; display: block; border-radius: 6px;" alt="Torani Syrups">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" style="color: #f5f5dc;">
-                                                    <%= gear.gearName %>
-                                                </h5>
-                                                <p class="card-text" style="color: #f5f5dc;">PHP
-                                                    <%= gear.price %>
-                                                </p>
+                                                <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+                                                
+                                                <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
+                                            
                                                 <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                                 <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                                 <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -245,12 +235,9 @@
                                                             <img src="./media/<%= gear.gearImage %>" class="img-fluid" alt="Torani Syrup">
                                                         </div>
                                                         <div class="col col-5">
-                                                            <h5 class="card-title">
-                                                                <%= gear.gearName %>
-                                                            </h5>
-                                                            <p class="card-text">PHP
-                                                                <%= gear.price %>
-                                                            </p>
+                                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+                                                
+                                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
                                                             <div class="mb-3">
@@ -298,12 +285,10 @@
                                                 <img src="./media/<%= gear.gearImage %>" class="img-fluid" style="width: 100%; height: auto; display: block; border-radius: 6px;" alt="Milks">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" style="color: #f5f5dc;">
-                                                    <%= gear.gearName %>
-                                                </h5>
-                                                <p class="card-text" style="color: #f5f5dc;">PHP
-                                                    <%= gear.price %>
-                                                </p>
+                                                <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+
+                                                <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
+                                                    
                                                 <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                                 <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                                 <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -326,12 +311,9 @@
                                                             <img src="./media/<%= gear.gearImage %>" class="img-fluid" alt="Milks">
                                                         </div>
                                                         <div class="col col-5">
-                                                            <h5 class="card-title">
-                                                                <%= gear.gearName %>
-                                                            </h5>
-                                                            <p class="card-text">PHP
-                                                                <%= gear.price %>
-                                                            </p>
+                                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+
+                                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
                                                             <div class="mb-3">
@@ -379,12 +361,9 @@
                                                 <img src="./media/<%= gear.gearImage %>" class="img-fluid" style="width: 100%; height: auto; display: block; border-radius: 6px;" alt="Cup">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" style="color: #f5f5dc;">
-                                                    <%= gear.gearName %>
-                                                </h5>
-                                                <p class="card-text" style="color: #f5f5dc;">PHP
-                                                    <%= gear.price %>
-                                                </p>
+                                                <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+
+                                                <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                 <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                                 <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                                 <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -407,12 +386,9 @@
                                                             <img src="./media/<%= gear.gearImage %>" class="img-fluid" alt="Cups">
                                                         </div>
                                                         <div class="col col-5">
-                                                            <h5 class="card-title">
-                                                                <%= gear.gearName %>
-                                                            </h5>
-                                                            <p class="card-text">PHP
-                                                                <%= gear.price %>
-                                                            </p>
+                                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+
+                                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
                                                             <div class="mb-3">
@@ -456,12 +432,9 @@
                                     <div class="card h-100" style="border: 2px solid #ddd; border-radius: 10px; padding: 20px 20px; overflow: hidden; background-color: #262626;">
                                         <img src="./media/<%= gear[i].gearImage %>" class="img-fluid" alt="Coffee Drinks" style="width: 100%; height: auto; display: block; border-radius: 6px; border: 2px solid #bbb;">
                                         <div class="card-body">
-                                            <h5 class="card-title" style="color: #E8E8E1">
-                                                <%= gear[i].gearName %>
-                                            </h5>
-                                            <p class="card-text" style="color: #E8E8E1">PHP
-                                                <%= gear[i].price %>
-                                            </p>
+                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+
+                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
                                             <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                             <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                             <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
