--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,15 +18,15 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
             id="products"
-        > <!-- LINK TO BE ADDED -->
+        >
             Products
         </a>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/menu">Menu</a></li> <!-- LINK TO BE ADDED -->
+            <li><a class="dropdown-item" href="/menu">Menu</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="/gear">Coffee & Brew Gear</a></li> <!-- LINK TO BE ADDED -->
+            <li><a class="dropdown-item" href="/gear">Coffee & Brew Gear</a></li> 
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="/merch">Merchandise</a></li> <!-- LINK TO BE ADDED -->
+            <li><a class="dropdown-item" href="/merch">Merchandise</a></li> 
         </ul>
         </li>
       </ul>
