AUTO INDENT SHIT

--- a/views/gear.ejs
+++ b/views/gear.ejs
@@ -79,12 +79,9 @@
                                                             <img src="./media/<%= gear.gearImage %>" class="img-fluid" alt="Brew Gear">
                                                         </div>
                                                         <div class="col col-5">
-                                                            <h5 class="card-title">
-                                                                <%= gear.gearName %>
-                                                            </h5>
-                                                            <p class="card-text">PHP
-                                                                <%= gear.price %>
-                                                            </p>
+                                                            <h5 class="card-title"><%= gear.gearName %></h5>
+                                                            <p class="card-text">PHP <%= gear.price %></p>
+                                                                
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
                                                             <div class="mb-3">
@@ -156,12 +153,8 @@
                                                             <img src="./media/<%= gear.gearImage %>" class="img-fluid" alt="Coffee Beans">
                                                         </div>
                                                         <div class="col col-5">
-                                                            <h5 class="card-title">
-                                                                <%= gear.gearName %>
-                                                            </h5>
-                                                            <p class="card-text">PHP
-                                                                <%= gear.price %>
-                                                            </p>
+                                                            <h5 class="card-title"><%= gear.gearName %></h5>
+                                                            <p class="card-text">PHP <%= gear.price %></p>
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
                                                             <div class="mb-3">
