updated fonts, order list

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -25,7 +25,7 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col">
                     <p>
-                        <span class="h2">Checkout</span>
+                        <span class="h2" style = "color: #752329; font-weight:900;">Checkout</span>
                     </p>
 
                     <% if (cart.products && cart.products.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
@@ -81,7 +81,8 @@
                 </div>
 
                 <div class="col">
-                    <p><span class="h2">User Information</span></p>
+                    <br>
+                    <p><span class="h2" style = "color: #752329; font-weight: 900;">User Information</span></p>
 
                     <form id="checkoutform" action="/checkout" method="post">
                         <div class="row">
