--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -25,7 +25,7 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col">
                     <p>
-                        <span class="h2">Shopping Cart</span>
+                        <span class="h2" style = "font-weight: 900; color: #752329;">Shopping Cart</span>
                     </p>
 
                     <% if (cart.products && cart.products.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
