--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -87,30 +87,42 @@
       <div class="container h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
               <div class="col">
-                  <p>
-                      <span class="h2">Orders</span>
-                  </p>
+
+                  <h1 style = "font-weight: 900; text-align: center; color:#752329">Orders</h1>
+                  <br>
 
                   <% if (orders && orders.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
 
                       <% orders.forEach(orders => { %>
-                          <div class="card mb-4">
+                          <div class="card mb-4" style = "background-color: #E8E8E1;">
                               <div class="card-body p-4">
                                   <div class="row text-center">
 
+                                    <div class="col">
+
+                                      <p>Date Ordered: <%= orders.date %></p>
+                                      <p>Name: <%= orders.fName + ' ' + orders.lName %></p>
+                                      <p>Address: <%= orders.address %></p>
+                                      <p>Payment Method: <%= orders.pMethod %></p>
+                                      <p>Contact Number: <%= orders.pNumber %></p>
+                                      <p>Total Price: <%= orders.totalPrice %></p>
+                                    </div>
+
+                                    <div class="col">
                                       <% orders.products.forEach(products => { %>
                                         <p>Name: <%= products.product_name %></p>
                                         <p>Price: <%= products.price %></p>
                                         <p>Quantity: <%= products.quantity %></p>
 
                                       <% }) %>
+                                    </div>
 
-                                      <p>Total Price: <%= orders.totalPrice %></p>
-                                      <p>Date Ordered: <%= orders.date %></p>
-                                      <p>Name: <%= orders.fName + ' ' + orders.lName %></p>
-                                      <p>Address: <%= orders.address %></p>
-                                      <p>Payment Method: <%= orders.pMethod %></p>
-                                      <p>Contact Number: <%= orders.pNumber %></p>
+                                      
+                                      
+
+                                      
+
+                                      
                                       
                                   </div>
                               </div>
