--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,7 +26,7 @@
               <div class="card mb-4">
                 <div class="card-body text-center">
                   <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle img-fluid" style="width: 150px;">
-                  <h5 class="my-3"><%= user.username %></h5>
+                  <h5 class="my-3" style = "color:#752329"><%= user.username %></h5>
                   <p class="text-muted mb-1"><%= user.fName + " " + user.lName %></p>
                 </div>
               </div>
