--- a/views/gear.ejs
+++ b/views/gear.ejs
@@ -425,9 +425,9 @@
                                     <div class="card h-100" style="border: 2px solid #ddd; border-radius: 10px; padding: 20px 20px; overflow: hidden; background-color: #262626;">
                                         <img src="./media/<%= gear[i].gearImage %>" class="img-fluid" alt="Coffee Drinks" style="width: 100%; height: auto; display: block; border-radius: 6px; border: 2px solid #bbb;">
                                         <div class="card-body">
-                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+                                            <h5 class="card-title" style="color: #f5f5dc;"><%= gear[i].gearName %></h5>
 
-                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
+                                            <p class="card-text" style="color: #f5f5dc;">PHP <%= gear[i].price %></p>
                                             <button class="btn btn-dark minus" style="background-color: #e8e8e1; color: #000000;">-</button>
                                             <input type="number" name="" id="" class="quantity" value="0" style="display: inline-block; width: 35.41px; height: 38px; background-color: #e8e8e1;">
                                             <button class="btn btn-dark plus" style="background-color: #e8e8e1; color: #000000;">+</button>
@@ -450,9 +450,9 @@
                                                         <img src="./media/<%= gear[i].gearImage %>" class="img-fluid" alt="Caution Coffee Brew Gear">
                                                     </div>
                                                     <div class="col col-5">
-                                                        <h5 class="card-title" style="color: #f5f5dc;"><%= gear.gearName %></h5>
+                                                        <h5 class="card-title" style="color: #212529;"><%= gear[i].gearName %></h5>
 
-                                                        <p class="card-text" style="color: #f5f5dc;">PHP <%= gear.price %></p>
+                                                        <p class="card-text" style="color: #212529;">PHP <%= gear[i].price %></p>
                                                         <form action="/review_process" method="POST" id="reviewForm">
 
                                                             <div class="mb-3">
